--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "client",
     "http"
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
     "php": "^8.2",
     "ext-json": "*"
