--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     {
       "name": "Roma Kuzmin",
       "email": "thenoilty@gmail.com",
-      "homepage": "https://www.noilty.com"
+      "homepage": "https://noilty.com"
     }
   ],
   "keywords": [
